--- a/src/panels/home.html
+++ b/src/panels/home.html
@@ -17,16 +17,16 @@
         </div>
         <div class="social-tab">
             <div class="social-list content-scroll">
-                <div data-url="https://discord.gg/e9q7Yr2cuQ" class="social-block">
+                <div data-url="https://polaria.fr" class="social-block">
+                    <div class="icon-web icon-social"></div>
+                </div>
+
+                <div data-url="https://discord.gg/fGmt58gZMt" class="social-block">
                     <div class="icon-discord icon-social"></div>
                 </div>
 
-                <div data-url="https://github.com/luuxis" class="social-block">
-                    <div class="icon-github icon-social"></div>
-                </div>
-
-                <div data-url="https://www.youtube.com/LuuxisHD" class="social-block">
-                    <div class="icon-youtube icon-social"></div>
+                <div data-url="https://www.tiktok.com/@polaria.rp" class="social-block">
+                    <div class="icon-tiktok icon-social"></div>
                 </div>
             </div>
         </div>
